--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Callee</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello World!</string>
+    <string name="placeholder">placeholder</string>
 </resources>
