--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello World!</string>
     <string name="placeholder">placeholder</string>
+    <string name="messageHint">Type something</string>
 </resources>
