--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Callee</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello World!</string>
-    <string name="placeholder">placeholder</string>
+    <string name="placeholder">placeholderrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr</string>
     <string name="messageHint">Type something</string>
 
     <string name="login_text2">A mail will be sent to the email address above with a 6 digit code that you will be asked to put later</string>
